--- a/module/Base/view/layout/layout.phtml
+++ b/module/Base/view/layout/layout.phtml
@@ -13,7 +13,7 @@
         <link type="text/css" rel="stylesheet" href="<?= $this->basePath('css/default.min.css') ?>" media="all">
         <link type="text/css" rel="stylesheet" href="<?= $this->basePath('css-client/default.css') ?>" media="all">
         <?= $this->headLink() ?>
-        <?= $this->headTitle($this->option(['client.name.short', 'service.name.full']))->setSeparator(' &middot; ')->setAutoEscape(false) ?>
+        <?= $this->headTitle($this->option(['client.name.full', 'service.name.short']))->setSeparator(' &middot; ')->setAutoEscape(false) ?>
     </head>
 
     <body>
@@ -29,56 +29,6 @@
                 <?php else: ?>
                     <style type="text/css"> #label-client { margin-top: 15px; } </style>
                 <?php endif; ?>
-            </div>
-
-            <div id="topbar">
-                <?= $this->headerLocaleChoice() ?>
-
-                <div id="topbar-contact" class="responsive-pass-1">
-                    <p>
-                        <span class="light-gray"><?= $this->t('Do your like our service?') ?></span><br>
-                        <span class="large-text">
-                            <a href="<?= $this->option('client.website.contact') ?>" target="_blank" class="unlined white">
-                                <?= $this->t('Contact & Feedback') ?>
-                            </a>
-                        </span>
-                    </p>
-                </div>
-
-                <div id="topbar-website" class="responsive-pass-2">
-                    <p>
-                        <span class="light-gray"><?= $this->t('Our website') ?></span><br>
-                        <span class="large-text">
-                            <a href="<?= $this->option('client.website') ?>" target="_blank" class="unlined white">
-                                <?= $this->shortUrl($this->option('client.website')) ?>
-                            </a>
-                        </span>
-                    </p>
-                </div>
-
-                <div id="topbar-infos" class="responsive-pass-3">
-                    <p>
-                        <span class="light-gray"><?= $this->t('Information about') ?></span><br>
-                        <span class="large-text">
-                            <a href="<?= $this->url('service/info') ?>" class="unlined white">
-                                <?= $this->option('subject.type') ?>
-                            </a>
-                        </span>
-                    </p>
-                </div>
-
-                <div id="topbar-phone" class="responsive-pass-4">
-                    <p>
-                        <span class="light-gray"><?= $this->t('Book by phone') ?></span><br>
-                        <span class="large-text">
-                            <a href="tel:<?= $this->option('client.contact.phone') ?>" class="unlined white">
-                                <?= $this->option('client.contact.phone') ?>
-                            </a>
-                        </span>
-                    </p>
-                </div>
-
-                <div id="topbar-separator" class="responsive-pass-4"></div>
             </div>
         </div>
 
