--- a/module/User/view/user/account/registration.phtml
+++ b/module/User/view/user/account/registration.phtml
@@ -97,28 +97,28 @@ $this->headScript()->appendFile($this->basePath('js/controller/user/registration
                     </tr>
                     <tr>
                         <td class="default-form-label-row">
-                            <?= $this->formLabel($form->get('rf-street')) ?>
+                            <?php // $this->formLabel($form->get('rf-street')) ?>
                         </td>
                         <td>
-                            <?= $this->formElement($form->get('rf-street')) ?>
-                            <?= $this->formElement($form->get('rf-number')) ?>
-                            <?= $this->formElementErrors($form->get('rf-street')) ?>
-                            <?= $this->formElementErrors($form->get('rf-number')) ?>
+                            <?php // $this->formElement($form->get('rf-street')) ?>
+                            <?php // $this->formElement($form->get('rf-number')) ?>
+                            <?php // $this->formElementErrors($form->get('rf-street')) ?>
+                            <?php // $this->formElementErrors($form->get('rf-number')) ?>
                         </td>
                     </tr>
                     <tr>
                         <td class="default-form-label-row">
-                            <?= $this->formLabel($form->get('rf-zip')) ?>
+                            <?php // $this->formLabel($form->get('rf-zip')) ?>
                         </td>
                         <td>
-                            <?= $this->formElement($form->get('rf-zip')) ?>
-                            <?= $this->formElement($form->get('rf-city')) ?>
-                            <?= $this->formElementErrors($form->get('rf-zip')) ?>
-                            <?= $this->formElementErrors($form->get('rf-city')) ?>
+                            <?php // $this->formElement($form->get('rf-zip')) ?>
+                            <?php // $this->formElement($form->get('rf-city')) ?>
+                            <?php // $this->formElementErrors($form->get('rf-zip')) ?>
+                            <?php // $this->formElementErrors($form->get('rf-city')) ?>
                         </td>
                     </tr>
 
-                    <?= $this->formRowDefault($form, 'rf-phone') ?>
+                    <?php // $this->formRowDefault($form, 'rf-phone') ?>
                 </table>
             </div>
 
