--- a/module/Frontend/view/frontend/index/userpanel.online.phtml
+++ b/module/Frontend/view/frontend/index/userpanel.online.phtml
@@ -1,39 +1,43 @@
-<table style="height: 100%;">
-    <tr>
-        <td class="responsive-pass-4" style="padding-right: 12px; border-right: solid 1px #CCC;">
+<div class="flex-userpanel"">
+<!--    <tr>
+        <td class="responsive-pass-4" style="padding-right: 12px; border-right: solid 1px #CCC;">-->
+        <div class="responsive-pass-4" style="padding-right: 12px;margin-right: 12px; border-right: solid 1px #CCC;">
             <div id="userpanel-status" class="no-wrap">
                 <?= sprintf($this->t('Online as %s'), $this->user->need('alias')) ?>
             </div>
-        </td>
+        </div>
+<!--        </td>-->
 
-        <td class="responsive-pass-4" style="padding-right: 12px;"></td>
+        <!--<td class="responsive-pass-4" style="padding-right: 12px;"></td>-->
 
         <?php if ($this->user->can('admin.see-menu')): ?>
 
             <?php $this->headScript()->appendFile($this->basePath('js/controller/frontend/index.admin.min.js')) ?>
 
-            <td class="responsive-pass-4" style="padding-right: 12px; border-right: solid 1px #CCC;">
+            <!--<td class="responsive-pass-4" style="padding-right: 12px; border-right: solid 1px #CCC;">-->
                 <a href="<?= $this->url('backend') ?>" id="admin-menu-link" class="default-button"><span class="symbolic symbolic-config"><?= $this->t('Administration') ?></span></a>
-            </td>
+            <!--</td>-->
 
-            <td class="responsive-pass-4" style="padding-right: 12px;"></td>
+            <!--<td class="responsive-pass-4" style="padding-right: 12px;"></td>-->
 
+        <?php elseif ($this->user->can('admin.user')): ?>
+                <a href="<?= $this->url('backend/user') ?>" id="user-management-link" class="default-button"><span class="symbolic symbolic-config"><?= $this->t('User-Administration') ?></span></a>
         <?php endif; ?>
 
-        <td>
+        <!--<td>-->
             <a href="<?= $this->url('user/bookings') ?>" class="default-button" data-tooltip="<?= $this->userLastBookings($this->user) ?>"><span class="symbolic symbolic-booking"><?= $this->t('My bookings') ?></span></a>
-        </td>
+        <!--</td>-->
 
-        <td>
+        <!--<td>-->
             <a href="<?= $this->url('user/settings') ?>" class="default-button"><span class="symbolic symbolic-user"><?= $this->t('My account') ?></span></a>
-        </td>
+        <!--</td>-->
 
-        <td style="padding-right: 12px;">
+        <!--<td style="padding-right: 12px;">-->
             <a href="<?= $this->url('user/logout') ?>" class="default-button"><span class="symbolic symbolic-off"><?= $this->t('Logout') ?></span></a>
-        </td>
+        <!--</td>-->
 
-        <td style="padding-left: 12px; border-left: solid 1px #CCC;">
+        <!--<td style="padding-left: 12px; border-left: solid 1px #CCC;">-->
             <a href="<?= $this->url('service/help') ?>" class="default-button" data-tooltip="<?= sprintf($this->t('Get additional %shelp and information%s'), '<b>', '</b>') ?>"><b>?</b></a>
-        </td>
-    </tr>
-</table>
+        <!--</td>-->
+    <!--</tr>-->
+</div>
