Appel-Tocuh-Icon für PWA

--- a/module/Base/view/layout/layout.phtml
+++ b/module/Base/view/layout/layout.phtml
@@ -13,6 +13,7 @@
         <link type="text/css" rel="stylesheet" href="<?= $this->basePath('css/default.min.css') ?>" media="all">
         <link type="text/css" rel="stylesheet" href="<?= $this->basePath('css-client/default.css') ?>" media="all">
         <link rel="manifest" href="<?=  $this->basePath('manifest.json') ?>" media="all">
+        <link rel="apple-touch-icon" href="<?= $this->basePath('imgs-client/icons/maskable_icon_x192.png') ?>">
         <?= $this->headLink() ?>
         <?= $this->headTitle($this->option(['client.name.full', 'service.name.short']))->setSeparator(' &middot; ')->setAutoEscape(false) ?>
     </head>
