Info-Sign in Kalender for Notes + CheckForNotes Variable before Save check if Notes has text

--- a/public/css-client/default.css
+++ b/public/css-client/default.css
@@ -85,6 +85,22 @@ a.cc-free:link.cc-free-partially, a.cc-free:visited.cc-free-partially {
     margin-bottom: 8px;
 }
 
+.cc-note .cc-label::after {    
+  background-image: url("../imgs-client/icons/info-sign.svg");
+  background-repeat: no-repeat;
+    background-size: 12px 12px;
+    display: inline-block;
+    margin-right: 5px;
+    float: right;
+    width: 12px; 
+    height: 12px;
+    content:"";
+}
+
+.cc-own.cc-note .cc-label::after {    
+    background-image: url("../imgs-client/icons/info-signw.svg");
+}
+
 /* Print */
 
 @media print
