--- a/module/Square/view/square/square/index.own.phtml
+++ b/module/Square/view/square/square/index.own.phtml
@@ -16,15 +16,19 @@ foreach ($this->bookingsFromUser as $bid => $booking) {
 
 if ($this->bookable) {
     echo sprintf('<p><span class="green">' . $this->t('This %s is still free.') . '</span></p>', $squareType);
+    
+    echo $this->squareCapacityInfo($square, $this->quantity);
 
-    $url = $this->url('square', [], ['query' => [
-        'ds' => $this->dateStart->format('Y-m-d'),
-        'de' => $this->dateEnd->format('Y-m-d'),
-        'ts' => $this->dateStart->format('H:i'),
-        'te' => $this->dateEnd->format('H:i'),
-        's' => $this->square->need('sid'),
-        'f' => 'fb']]);
+    echo $this->squareBookingInfo($square, $bookings);
 
-    echo sprintf('<p><a href="%s" class="default-button squarebox-internal-link"><span class="symbolic symbolic-plus">%s</span></a></p>',
-        $url, $this->t('Book more'));
+//    $url = $this->url('square', [], ['query' => [
+//        'ds' => $this->dateStart->format('Y-m-d'),
+//        'de' => $this->dateEnd->format('Y-m-d'),
+//        'ts' => $this->dateStart->format('H:i'),
+//        'te' => $this->dateEnd->format('H:i'),
+//        's' => $this->square->need('sid'),
+//        'f' => 'fb']]);
+//
+//    echo sprintf('<p><a href="%s" class="default-button squarebox-internal-link"><span class="symbolic symbolic-plus">%s</span></a></p>',
+//        $url, $this->t('Book more'));
 }
