--- a/module/Backend/view/backend/booking/index.datepicker.phtml
+++ b/module/Backend/view/backend/booking/index.datepicker.phtml
@@ -10,7 +10,7 @@ if (! ($this->dateStart || $this->dateEnd)) {
 
 ?>
 
-<div style="padding: 10px 0px 16px 0px;">
+<div class="no-print" style="padding: 10px 0px 16px 0px;">
     <form method="get" action="<?= $this->url('backend/booking') ?>">
         <table class="default-table">
             <tr>
